Bug 9177 - "info files" says "serial" twice when remote debugging via TCP
Summary: "info files" says "serial" twice when remote debugging via TCP
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: remote (show other bugs)
Version: 6.3
: P3 normal
Target Milestone: 12.1
Assignee: Tom Tromey
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-01-23 21:38 UTC by flash
Modified: 2022-01-13 14:55 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description flash 2006-01-23 21:38:02 UTC
[Converted from Gnats 2072]

"info files' when remote debugging an ARM target over TCP says "serial" twice rather than "TCP".  This is obviously not a big deal, but it is incorrect; even if the command can't tell the difference, just replacing the explicit mentions of "serial" with "remote" would suffice.

Release:
6.3

Environment:
Ubuntu Linux 5.04, GDB --host=i686-pc-linux-gnu --target=arm-linux, built from release 6.3 sources.  Debugging a remote ARM Linux target via TCP (the precise configuration details are confidential, but I doubt they're relevant.)
---
http://pobox.com/~flash
Quality Lead for Compilers and Debuggers
PalmSource, Inc. Tools Quality Management

How-To-Repeat:
Remote Step:

gdbserver :1234 /opt/palmos/tests/debugger/SimpleCall.kj


Host Steps: 
/opt/gdb-6.3/gdb/gdb /exported/device_root/opt/palmos/tests/debugger/SimpleCall.kj

In GDB:
set solib-absolute-prefix /exported/device_root/
target remote 192.168.2.101:1234
info files

Output;
…
Remote serial target in gdb-specific protocol:
Debugging a target over a serial line.
Comment 1 Tom Tromey 2022-01-07 20:53:10 UTC
Still there.
Comment 3 Sourceware Commits 2022-01-12 15:18:35 UTC
The master branch has been updated by Tom Tromey <tromey@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=ae9adb365189f0f8c04aa5d7348c8e8a73a65f61

commit ae9adb365189f0f8c04aa5d7348c8e8a73a65f61
Author: Tom Tromey <tromey@adacore.com>
Date:   Tue Jan 11 11:52:33 2022 -0700

    Don't mention "serial" in target remote description
    
    PR remote/9177 points out that "info files" mentions "serial" a couple
    of times:
    
        Remote serial target in gdb-specific protocol:
        Debugging a target over a serial line.
    
    However, often the remote target isn't really a serial connection.
    
    It seems to me that this text could be a bit clearer; and furthermore
    since "info files" prints the target's long description,
    remote_target::files_info doesn't really add much and can simply be
    removed.
    
    Regression tested on x86-64 Fedora 34.
    
    Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=9177
Comment 4 Tom Tromey 2022-01-12 15:19:17 UTC
Fixed.
Comment 5 flash 2022-01-13 14:55:12 UTC
What a lovely sweet sixteen birthday present for this bug; thank you kindly.
Comment 6 flash 2022-01-13 14:55:37 UTC
What a lovely sweet sixteen birthday present for this bug; thank you kindly.